<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="passengersTrip">Passengers: 1</string><string name="consumptionNow">Consumption: 0.0L</string><string name="fuelCostPerson">Individual cost: 0,-</string><string name="distanceDrivenNow">Driven 0.0km</string><string name="fuelCostTotal">Cost: 0,-</string><string name="app_name">Fuel Calculator</string><string name="toggleButtonOn">Stop</string><string name="toggleButtonOff">Start</string><string name="fuelCost">Fuel Cost</string><string name="fuelConsumption">Consumption</string><string name="passengers">Passengers</string><string name="liter">/l</string><string name="tenKm">/10km</string><string name="emptyLog">Empty Log</string>
    <string name="newTrip">New Trip</string>

</resources>
